[package]
name = "auction-house-v2"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "auction_house_v2"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
borsh = ">= 0.9"
mpl-bubblegum="1.0.0"
winnow="=0.4.1"
anchor-spl = "0.28.0"
spl-token = { version = "4.0.0",  features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0.0",  features = ["no-entrypoint"] }
strum = "0.24"
strum_macros = "0.24"
mpl-utils = { version = "0.3.1" }

[dev-dependencies]
anchor-client = "0.28.0"
rmp-serde = "1.1.1"
shellexpand = "2.1.2"
serde = { version = "1.0.147", features = ["derive"]}
serde_json = "1.0"
solana-program = "1.16.10"
solana-program-test = "1.16.10"
solana-sdk = "1.16.10"
tokio = { version = "1.35.1", features = ["full"] }
env_logger="0.9.3"
